--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -54,7 +54,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "source": [
         "websites = pd.read_csv('https://raw.githubusercontent.com/eduardoheros/lab-supervised-learning/master/website.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 275
         },
-        "outputId": "ab90f26d-e995-46af-df09-34d6234491be"
+        "outputId": "f3dab904-eab8-4401-efbd-f9e7873fc190"
       },
       "source": [
         "websites.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 53
         }
       ]
     },
@@ -317,14 +317,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 493
         },
-        "outputId": "79ee0d80-c974-4360-a19a-b6b11ed629df"
+        "outputId": "e93406f6-9e6f-48e0-bbe3-4cb82c318e7b"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 4,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,26 +389,13 @@
       "metadata": {
         "id": "SudXe1kDaVX9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 73
-        },
-        "outputId": "78d8b762-41b8-4704-cc12-9d5bdcf77e10"
+        "colab": {}
       },
       "source": [
         "import seaborn as sns"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 55,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -419,7 +406,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 869
         },
-        "outputId": "ecf19f48-beb1-4080-b8d9-d0ddeca27e07"
+        "outputId": "23fe85fa-947d-4ddb-a5d0-520c9e384c08"
       },
       "source": [
         "def visual_corr(websites):\n",
@@ -431,7 +418,7 @@
         "  sns.heatmap(matrix_corr,annot=True,mask=mask,cbar=False,linewidths=1,cmap=\"YlGnBu\",center=0);\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 6,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +453,7 @@
         "    x=1000*x\n",
         "  return x"
       ],
-      "execution_count": 7,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -485,7 +472,7 @@
         "  sort_corr=sum_matrix_corr.sort_values(by=\"SUM\",ascending=False)\n",
         "  return sort_corr[\"SUM\"]"
       ],
-      "execution_count": 8,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -495,15 +482,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 272
         },
-        "outputId": "143bbe79-0df7-4174-8a6c-4657a5d3254d"
+        "outputId": "b3061f77-5484-42b5-c78a-8e8e7fff8566"
       },
       "source": [
         "##Las columnas listadas presentan las correlaciones mas altas\n",
         "col_rem(websites)"
       ],
-      "execution_count": 9,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +516,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 59
         }
       ]
     },
@@ -559,7 +546,7 @@
       "source": [
         "columnas=col_rem(websites).index[0:3]"
       ],
-      "execution_count": 10,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -571,13 +558,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 868
         },
-        "outputId": "16a44a4c-5ab0-46d9-9c8c-5a0719bf80bd"
+        "outputId": "a036e561-f112-4bb6-e609-d228d2a8efd1"
       },
       "source": [
         "websites.drop(columns=columnas,inplace=True)\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 11,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "display_data",
@@ -600,14 +587,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 233
+          "height": 221
         },
-        "outputId": "33fd1b51-97c1-4b19-926f-24c64a2d19de"
+        "outputId": "a0985edf-bed2-41a2-8f9f-2133d8bf7d68"
       },
       "source": [
         "col_rem(websites)"
       ],
-      "execution_count": 12,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 62
         }
       ]
     },
@@ -641,15 +628,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 204
         },
-        "outputId": "82c7b706-3d0c-495d-81a0-dc79f4f1d26e"
+        "outputId": "4bbc2232-92d3-487b-8724-58ae6de4ccbd"
       },
       "source": [
         "websites.drop(columns=\"REMOTE_APP_BYTES\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 13,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +658,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 63
         }
       ]
     },
@@ -682,15 +669,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 187
         },
-        "outputId": "719561ec-0400-44bc-d6e3-297868806839"
+        "outputId": "a130f4c7-40bb-4218-d747-3e2d8820cfd1"
       },
       "source": [
         "websites.drop(columns=\"NUMBER_SPECIAL_CHARACTERS\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 14,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 64
         }
       ]
     },
@@ -724,12 +711,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 831
         },
-        "outputId": "83787c80-a970-4f34-ce6d-aa742d15cb54"
+        "outputId": "16491653-7c14-4df1-a75d-dcf02b077218"
       },
       "source": [
         "visual_corr(websites)"
       ],
-      "execution_count": 15,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "display_data",
@@ -764,14 +751,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 431
+          "height": 408
         },
-        "outputId": "ee71a4dc-4e0c-4500-ff23-1a6ebaa7a977"
+        "outputId": "917528ba-6354-4b34-82f7-a4b7f82d501a"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 16,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +813,7 @@
       "source": [
         "websites.drop(columns=\"CONTENT_LENGTH\",inplace=True)"
       ],
-      "execution_count": 17,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -839,7 +826,7 @@
       "source": [
         "websites.dropna(inplace=True)"
       ],
-      "execution_count": 18,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -861,14 +848,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 413
+          "height": 0
         },
-        "outputId": "d47e4be5-3784-42b8-faf3-a6f0e759fb41"
+        "outputId": "7a8c7b69-6e42-4790-d5de-ebe796582b2c"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 19,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,14 +933,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 119
         },
-        "outputId": "d144640d-96e1-4d72-f1b6-aae22236cf7b"
+        "outputId": "a71fa69c-2fd8-40ac-aa4d-6ada913d9b44"
       },
       "source": [
         "pd.unique(websites.WHOIS_COUNTRY)"
       ],
-      "execution_count": 20,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +957,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 70
         }
       ]
     },
@@ -984,7 +971,7 @@
       "source": [
         "dict_replace={\"CYPRUS\":\"CY\",\"UNITED KINGDOM\":\"UK\",\"[U'GB'; U'UK']\":\"UK\",\"GB\":\"UK\"}"
       ],
-      "execution_count": 47,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -998,7 +985,7 @@
         "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.apply(lambda x: x.upper())\n",
         "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.replace(dict_replace)"
       ],
-      "execution_count": 48,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -1024,15 +1011,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 204
         },
-        "outputId": "4e49f2dd-0153-409d-d879-8e26cd498ba5"
+        "outputId": "9642dc32-be44-4474-8b2d-43770edad352"
       },
       "source": [
         "country=websites.WHOIS_COUNTRY.value_counts()\n",
         "country[0:10]"
       ],
-      "execution_count": 49,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,9 +1041,96 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 73
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "heXRHAmvi5f4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "country=country.index.to_list()"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c-8_rbIujN2r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2061e4a4-cfd8-4dbe-9f47-718a56cf24cd"
+      },
+      "source": [
+        "country.pop(1)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'NONE'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JbmgN-Uxj5pk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 104,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hldQitacj8VN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "arange=np.arange(10,len(country),1)"
+      ],
+      "execution_count": 112,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AZ-YQVK4jQos",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dict_top={}\n",
+        "for i in range(10):\n",
+        "  dict_top[country[i]]=country[i]"
+      ],
+      "execution_count": 114,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1074,39 +1148,69 @@
         "scrolled": true,
         "id": "fKqZhBr1aVZt",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 233
-        },
-        "outputId": "7d0dda86-acd4-401a-8983-217177c850e2"
+        "colab": {}
       },
       "source": [
-        "websites.WHOIS_COUNTRY"
+        "for i in arange:\n",
+        "  dict_top[country[i]]=\"OTHER\""
       ],
-      "execution_count": 50,
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4FYzAUWYlgCR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dict_top[\"NONE\"]=\"OTHER\""
+      ],
+      "execution_count": 121,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4aEnM_IelGJo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.replace(dict_top)"
+      ],
+      "execution_count": 123,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O2jIaB4JlT6_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "a533787c-2107-45a4-9bce-f2c7661c23fe"
+      },
+      "source": [
+        "websites.WHOIS_COUNTRY.unique()"
+      ],
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0       NONE\n",
-              "1       NONE\n",
-              "2       NONE\n",
-              "3         US\n",
-              "4         US\n",
-              "        ... \n",
-              "1776      ES\n",
-              "1777      ES\n",
-              "1778      US\n",
-              "1779      US\n",
-              "1780      US\n",
-              "Name: WHOIS_COUNTRY, Length: 1779, dtype: object"
+              "array(['OTHER', 'US', 'UK', 'AU', 'CA', 'PA', 'IN', 'JP', 'CN', 'CZ',\n",
+              "       'ES'], dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 124
         }
       ]
     },
@@ -1132,9 +1236,9 @@
         "colab": {}
       },
       "source": [
-        "# Your code here\n"
+        "websites.drop(columns=['WHOIS_STATEPRO', 'WHOIS_REGDATE', 'WHOIS_UPDATED_DATE'],inplace=True)"
       ],
-      "execution_count": 25,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -1159,7 +1263,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 26,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -1182,7 +1286,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 27,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -1205,7 +1309,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 28,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -1230,7 +1334,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 29,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -1253,7 +1357,7 @@
       "source": [
         "# Your comment here\n"
       ],
-      "execution_count": 30,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -1278,7 +1382,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 31,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -1292,7 +1396,7 @@
       "source": [
         "# Count `SERVER` value counts here\n"
       ],
-      "execution_count": 32,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -1315,7 +1419,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 33,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -1338,7 +1442,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 34,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -1365,7 +1469,7 @@
         "\n",
         "# Your code here:\n"
       ],
-      "execution_count": 35,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -1391,7 +1495,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 36,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -1415,7 +1519,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -1439,7 +1543,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 38,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -1463,7 +1567,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": 39,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -1489,7 +1593,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 40,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -1513,7 +1617,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -1539,7 +1643,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 42,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -1563,7 +1667,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": 43,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -1592,7 +1696,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 44,
+      "execution_count": 94,
       "outputs": []
     }
   ]
