added some comments for drop_first

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -1829,7 +1829,9 @@
     "website_dummy = pd.get_dummies(websites)\n",
     "\n",
     "# drop_first was dropping the first category from the DataFrame so I removed it, and everything\n",
-    "# worked as expected."
+    "# worked as expected.\n",
+    "# started digging into things, and got more confused.\n",
+    "# https://datascience.stackexchange.com/questions/47638/in-which-cases-shouldnt-we-drop-the-first-level-of-categorical-variables"
    ]
   },
   {
